--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@vitest/ui": "^1.2.0",
     "fake-indexeddb": "^5.0.2",
+    "jsdom": "^27.1.0",
     "typescript": "^5.3.3",
     "vitest": "^1.2.0"
   }
