--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -15,19 +15,14 @@
   "dependencies": {
     "@catchvoca/core": "workspace:*",
     "@catchvoca/types": "workspace:*",
-    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.3",
-    "react-window": "^1.8.10",
-    "zustand": "^4.5.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^2.0.0-beta.23",
     "@types/chrome": "^0.0.260",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
-    "@types/react-window": "^1.8.8",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.33",
