--- a/packages/extension/public/manifest.json
+++ b/packages/extension/public/manifest.json
@@ -8,7 +8,9 @@
   "permissions": [
     "storage",
     "contextMenus",
-    "activeTab"
+    "activeTab",
+    "declarativeNetRequest",
+    "notifications"
   ],
 
   "host_permissions": [
@@ -16,20 +18,7 @@
   ],
 
   "action": {
-    "default_popup": "index.html",
-    "default_icon": {
-      "16": "icons/icon16.png",
-      "32": "icons/icon32.png",
-      "48": "icons/icon48.png",
-      "128": "icons/icon128.png"
-    }
-  },
-
-  "icons": {
-    "16": "icons/icon16.png",
-    "32": "icons/icon32.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
+    "default_popup": "index.html"
   },
 
   "background": {
@@ -53,16 +42,5 @@
         "path": "rules/rule_endic.json"
       }
     ]
-  },
-
-  "permissions_declarative_net_request": [
-    "declarativeNetRequest"
-  ],
-
-  "web_accessible_resources": [
-    {
-      "resources": ["icons/*"],
-      "matches": ["<all_urls>"]
-    }
-  ]
+  }
 }
