최초 기획서와의 비교를 통한 누락 기능 추가 계획 수립
- AI 하이라이트 기능 (Phase 2-B):
🟢 녹색: 학습 완료 단어
🟡 노란색: 추천 학습 단어
중요도 알고리즘 정의 (COCA 40% + AWL 30% + 토익/토플 20% + Gemini 10%)

- 광고 시스템 (Phase 2-A):
Google AdSense 통합 계획
4개 광고 위치 정의 (퀴즈 배너, 모바일 링크, CSV 내보내기, Apps Script)
Pro 사용자 광고 제거 로직

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,19 @@ coverage
 
 # OS
 Thumbs.db
+
+# Project documentation (internal)
+CLAUDE.md
+DEV_PLAN.md
+PROGRESS.md
+plan.md
+DEVELOPMENT_LOG.md
+DEV_PLAN.md
+/docs
+TODO.md
+plan.md
+nul
+plan.md
+TODO.md
+TODO.md
+README.md
