--- a/packages/extension/.env.example
+++ b/packages/extension/.env.example
@@ -1,12 +1,10 @@
 # CatchVoca Extension Environment Variables
 
-# Google Apps Script Web App URL for mobile quiz feature
-# Deploy your Apps Script and paste the web app URL here
-# Example: https://script.google.com/macros/s/YOUR_DEPLOYMENT_ID/exec
-VITE_APPS_SCRIPT_URL=
-
 # Google Gemini API Key for AI webpage analysis (Phase 2 - Pro feature)
 # Get your API key from: https://ai.google.dev/
 # Free tier: 1,500 requests/day, 4M tokens/month
 # Example: AIzaSyD...
 VITE_GEMINI_API_KEY=AIzaSyA45toOVi_qFGoyUypsGRx9KsOGvg_bejg
+
+# Note: Mobile quiz uses URL Hash-based approach (no server required)
+# No Apps Script URL needed - quiz data is embedded in the shareable link
