--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -15,12 +15,14 @@
   "dependencies": {
     "@catchvoca/core": "workspace:*",
     "@catchvoca/types": "workspace:*",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^2.0.0-beta.23",
     "@types/chrome": "^0.0.260",
+    "@types/qrcode": "^1.5.6",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
