# 단어장 UI/UX 수정 / 복습프로그램 / 단어장 관리프로그램 / 파일 내보내기 수정
# 단어장 UI/UX 수정 / 복습프로그램 / 단어장 관리프로그램 / 파일 내보내기 수정

--- a/packages/extension/public/manifest.json
+++ b/packages/extension/public/manifest.json
@@ -10,7 +10,10 @@
     "contextMenus",
     "activeTab",
     "declarativeNetRequest",
-    "notifications"
+    "notifications",
+    "clipboardRead",
+    "offscreen",
+    "scripting"
   ],
 
   "host_permissions": [
@@ -28,7 +31,7 @@
 
   "content_scripts": [
     {
-      "matches": ["https://*/*", "http://*/*"],
+      "matches": ["https://*/*", "http://*/*", "file:///*"],
       "js": ["src/content/index.ts"],
       "run_at": "document_idle"
     }
@@ -58,6 +61,13 @@
         "mac": "Command+Shift+Q"
       },
       "description": "Start quiz session"
+    },
+    "lookup-word-pdf": {
+      "suggested_key": {
+        "default": "Alt+C",
+        "mac": "Alt+C"
+      },
+      "description": "Look up word in PDF (auto-copy + lookup)"
     },
     "_execute_action": {
       "suggested_key": {
