AI 웹페이지 분석 기능 추가/개선
웹페이지 분석 시 하이라이트 / 점수 표시
분석한 단어들을 단어장에 추가 또는 쉽게 조회

--- a/packages/extension/.env.example
+++ b/packages/extension/.env.example
@@ -4,7 +4,7 @@
 # Get your API key from: https://ai.google.dev/
 # Free tier: 1,500 requests/day, 4M tokens/month
 # Example: AIzaSyD...
-VITE_GEMINI_API_KEY=AIzaSyA45toOVi_qFGoyUypsGRx9KsOGvg_bejg
+VITE_GEMINI_API_KEY=
 
 # Note: Mobile quiz uses URL Hash-based approach (no server required)
 # No Apps Script URL needed - quiz data is embedded in the shareable link
