--- a/packages/extension/.env.example
+++ b/packages/extension/.env.example
@@ -3,8 +3,11 @@
 # Google Gemini API Key for AI webpage analysis (Phase 2 - Pro feature)
 # Get your API key from: https://ai.google.dev/
 # Free tier: 1,500 requests/day, 4M tokens/month
-# Example: AIzaSyD...
-VITE_GEMINI_API_KEY=
+VITE_GEMINI_API_KEY=your_gemini_api_key_here
 
-# Note: Mobile quiz uses URL Hash-based approach (no server required)
-# No Apps Script URL needed - quiz data is embedded in the shareable link
+# Gemini API URL (stable version)
+VITE_GEMINI_API_URL=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash-001:generateContent
+
+# Firebase Mobile Quiz PWA URL
+# Default: https://catch-voca-quiz.vercel.app/
+VITE_PWA_URL=https://catch-voca-quiz.vercel.app/
