--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@catchvoca/core": "workspace:*",
     "@catchvoca/types": "workspace:*",
+    "firebase": "^12.5.0",
     "lz-string": "^1.5.0",
     "qrcode": "^1.5.4",
     "react": "^18.2.0",
